--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
     "name": "Telethon Music Bot",
     "description": "Music allow you to stream music trought the telegram voice chat feature Based on Telethon.",
-    "keywords": ["Zaid", "Zaid-Vc-Player", "music", "voice chat", "telegram", "Yukki", "Yukki Music", "Private Music", "telethon"],
-    "repository": "https://github.com/ITZ-ZAID/Telethon-Music",
+    "keywords": ["Ayush", "Ayush-Vc-Player", "music", "voice chat", "telegram", "Yukki", "Yukki Music", "Private Music", "telethon"],
+    "repository": "https://github.com/ayushdeveloper001/Telethon-Music",
   "stack": "container",
     "env": {
         "STRING_SESSION": {
